# t-dev-private

./: .env.example  .gitignore  .gitlab-ci.yml  API_ENDPOINTS.md  BAN_FEATURE.md  IMPLEMENTATION_SUMMARY.md  README.md  data-archi.md  docker-compose.yml
backend/: .env.example  Cargo.toml  Dockerfile  TESTS.md
backend/migrations/: 20240101000001_init.sql  20240102000001_add_bans.sql  20240102000001_add_is_private_to_channels.sql  20240104000001_add_direct_messages.sql  20240105000001_add_reactions.sql  20240106000001_add_icon_to_channels.sql
backend/src/: lib.rs  main.rs
backend/src/application/: mod.rs
backend/src/application/dto/: auth_dto.rs  channel_dto.rs  dm_dto.rs  message_dto.rs  mod.rs  reaction_dto.rs  server_dto.rs  user_dto.rs
backend/src/application/services/: auth_service.rs  channel_service.rs  dm_service.rs  message_service.rs  mod.rs  reaction_service.rs  server_service.rs
backend/src/config/: settings.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/domain/: mod.rs
backend/src/infrastructure/domain/entities/: ban.rs  channel.rs  direct_message.rs  invitation.rs  member.rs  message.rs  mod.rs  reaction.rs  server.rs  user.rs
backend/src/infrastructure/domain/enums/: mod.rs  role.rs  user_status.rs
backend/src/infrastructure/domain/errors/: domain_error.rs  mod.rs
backend/src/infrastructure/security/: jwt.rs  mod.rs  password.rs
backend/src/interface/http/: mod.rs  routes.rs
backend/src/interface/websocket/: # Code Citations.md  events.rs  handler.rs
backend/src/shared/: app_state.rs
tjsf/: Dockerfile  (+6 more)
(+130 files in other folders)
